--- a/React Avançado/StyledComponents/package.json
+++ b/React Avançado/StyledComponents/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "filme",
+  "name": "template",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +10,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.2.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
